syntax = "proto3";

package smartoffice;

// Air Quality Monitoring Service
service AirQuality {
  rpc GetAirQuality(AirQualityRequest) returns (AirQualityResponse);

  rpc StreamAirQualityUpdates(AirQualityRequest) returns (stream AirQualityResponse);
}

// Request message
message AirQualityRequest {
  string room_id = 1;
}

// Response message
message AirQualityResponse {
  string room_id = 1;
  float temperature = 2;
  float humidity = 3;
  float pm2_5 = 4;
}
